Re-organization of some datatypes code to be able to share validation code against facets.
git-svn-id: https://svn.apache.org/repos/asf/xerces/java/trunk@317059 13f79535-47bb-0310-9956-ffa450edef68